# docs/swagger/swagger.yaml
@@ -1149,6 +1149,10 @@ paths:
           description: Arrow not found
           schema:
             $ref: '#/definitions/github_com_rabbytesoftware_quiver_core_internal_api_libs.ErrResponse'
+        "409":
+          description: Another identity's workdir occupies this identity's path
+          schema:
+            $ref: '#/definitions/github_com_rabbytesoftware_quiver_core_internal_api_libs.ErrResponse'
         "500":
           description: Internal error
           schema:
@@ -1180,8 +1184,9 @@ paths:
           schema:
             $ref: '#/definitions/github_com_rabbytesoftware_quiver_core_internal_api_libs.ErrResponse'
         "409":
-          description: A concurrent registration of the same identity won the race;
-            re-registering is otherwise idempotent (201)
+          description: A concurrent registration of the same identity won the race
+            (re-registering is otherwise idempotent, 201), or another identity's workdir
+            occupies this identity's path
           schema:
             $ref: '#/definitions/github_com_rabbytesoftware_quiver_core_internal_api_libs.ErrResponse'
         "500":
@@ -2059,7 +2064,8 @@ paths:
           schema:
             $ref: '#/definitions/github_com_rabbytesoftware_quiver_core_internal_api_libs.ErrResponse'
         "409":
-          description: Arrow already running
+          description: Arrow already running, a cyclic dependency, or another identity's
+            workdir occupies this identity's path (no step runs)
           schema:
             $ref: '#/definitions/github_com_rabbytesoftware_quiver_core_internal_api_libs.ErrResponse'
         "422":
